tests/negative-fixtures/banned_hashset_reexport/src/lib.rs
pub use std::collections::HashSet as UnorderedSet;

pub fn unordered_set() -> UnorderedSet<String> {
    UnorderedSet::new()
}
